--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-.test {
-    height: 2rem;
-}
+main div div ul {
+  list-style: none; }
+
+footer div div div a {
+  color: purple; }
+
+/*# sourceMappingURL=style.css.map */
